tests/spec/emit/snapshots/self_type_matches_the_spelled_out_receiver.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Counter {
    value: int,
  }
  
  impl Counter {
    fn spelled(self: mut Ref<Counter>) {
      self.value += 1
    }
  
    fn shorthand(self: mut Ref<Self>) {
      self.value += 1
    }
  }
  
  fn run() {
    let mut c = Counter { value: 0 }
    c.spelled()
    c.shorthand()
  }
---
package main

type Counter struct {
	value int
}

func (c *Counter) spelled() {
	c.value++
}

func (c *Counter) shorthand() {
	c.value++
}

func run() {
	c := Counter{value: 0}
	c.spelled()
	c.shorthand()
}
