tests/spec/emit/snapshots/sender_capacity.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Sender<int>) -> int {
    s.capacity()
  }
---
package main

func test(s chan<- int) int {
	return cap(s)
}
