tests/spec/emit/snapshots/sender_is_empty.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Sender<int>) -> bool {
    s.is_empty()
  }
---
package main

func test(s chan<- int) bool {
	return len(s) == 0
}
