tests/spec/emit/snapshots/sender_length.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Sender<int>) -> int {
    s.length()
  }
---
package main

func test(s chan<- int) int {
	return len(s)
}
