tests/spec/emit/snapshots/sender_type_in_struct.snap
---
source: tests/spec/emit/concurrency.rs
description: "input: \nstruct Producer { output: Sender<int> }\n\nfn test(p: Producer) -> Sender<int> {\n  p.output\n}\n"
---
package main

type Producer struct {
	output chan<- int
}

func test(p Producer) chan<- int {
	return p.output
}
