tests/spec/emit/snapshots/sentinel_hinted_tail_call_wraps_in_wrapper_fn.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:example.com/idx"
  
  fn find(haystack: string, needle: string) -> Option<int> {
    idx.Find(haystack, needle)
  }
  
  fn main() {
    let _ = find("hello", "z")
  }
---
package main

import (
	"example.com/idx"
	lisette "github.com/ivov/lisette/prelude"
)

func find(haystack, needle string) (int, bool) {
	ret := idx.Find(haystack, needle)
	option := lisette.OptionFromCommaOk[int](ret, ret != -1)
	if option.Tag == lisette.OptionSome {
		return option.SomeVal, true
	}
	return 0, false
}

func main() {
	find("hello", "z")
}
