tests/spec/emit/snapshots/sentinel_int_hint_wraps_to_option_at_call_site.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:example.com/idx"
  
  fn main() {
    let pos = idx.Find("hello", "lo")
    let _ = match pos {
      Some(i) => i,
      None => -2,
    }
  }
---
package main

import (
	"example.com/idx"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ret := idx.Find("hello", "lo")
	pos := lisette.OptionFromCommaOk[int](ret, ret != -1)
	var tmp int
	if pos.Tag == lisette.OptionSome {
		tmp = pos.SomeVal
	} else {
		tmp = -2
	}
	_ = tmp
}
