tests/spec/emit/snapshots/shift_by_imported_nonliteral_constant_not_pinned.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:example.com/consts"
  
  fn main() {
    let _ = (1 << consts.SHIFT) as float64
  }
---
package main

import "example.com/consts"

func main() {
	_ = float64(1 << consts.SHIFT)
}
